--- a/index.html
+++ b/index.html
@@ -41,6 +41,41 @@
 
             </div>
         </header>
+        <main>
+
+            <section>
+                <div class="container">
+                    <div class="headline">
+                        <h1>Manage All Your Money in One App</h1>
+                    </div>
+
+                    <div class="content">
+                        <p>We offer you a new generation of the mobile banking. Save, spend & manage money in your
+                            pocket.</p>
+                        <div class="buttons">
+                            <a class="btn-download-app" href="#"><img src="/images/appstore.svg" alt="appstore"></a>
+                            <a class="btn-download-app" href="#"><img src="/images/googleplay.svg"
+                                    alt="google play"></a>
+                        </div>
+
+                        <a href="#" class="discover-more">
+                            <span class="btn-circle">
+                                <i class="fa-solid fa-chevron-down"></i>
+                            </span>
+                            <span>Discover more</span>
+                        </a>
+                    </div>
+
+                    <div class="images">
+                        <img class="img-back" src="/images/iPhone 12 Pro back.svg" alt="iPhone 12 Pro back">
+                        <img class="img-front" src="/images/iPhone 12 Pro front.svg" alt="iPhone 12 Pro front">
+                    </div>
+                </div>
+            </section>
+        </main>
+        <footer>
+
+        </footer>
 
     </div>
 
