--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </header>
         <main>
 
-            <section>
+            <section id="hero">
                 <div class="container">
                     <div class="headline">
                         <h1>Manage All Your Money in One App</h1>
