Build footer and design it

--- a/index.html
+++ b/index.html
@@ -42,29 +42,6 @@
             </div>
         </header>
         <main>
-            <section id="brands">
-                <div class="container">
-                    <div id="brand-1" class="brand-box">
-                        <img src="/images/brand-1.svg" alt="brand-1">
-                    </div>
-                    <div id="brand-2" class="brand-box">
-                        <img src="/images/brand-2.svg" alt="brand-2">
-                    </div>
-                    <div id="brand-3" class="brand-box">
-                        <img src="/images/brand-3.svg" alt="brand-3">
-                    </div>
-                    <div id="brand-4" class="brand-box">
-                        <img src="/images/brand-4.svg" alt="brand-4">
-                    </div>
-                    <div id="brand-5" class="brand-box">
-                        <img src="/images/brand-5.svg" alt="brand-5">
-                    </div>
-                    <div id="brand-6" class="brand-box">
-                        <img src="/images/brand-6.svg" alt="brand-6">
-                    </div>
-                </div>
-            </section>
-
             <section id="hero">
                 <div class="container">
                     <div class="headline">
@@ -94,9 +71,35 @@
                     </div>
                 </div>
             </section>
+
+            <section id="brands">
+                <div class="container">
+                    <div id="brand-1" class="brand-box">
+                        <img src="/images/brand-1.svg" alt="brand-1">
+                    </div>
+                    <div id="brand-2" class="brand-box">
+                        <img src="/images/brand-2.svg" alt="brand-2">
+                    </div>
+                    <div id="brand-3" class="brand-box">
+                        <img src="/images/brand-3.svg" alt="brand-3">
+                    </div>
+                    <div id="brand-4" class="brand-box">
+                        <img src="/images/brand-4.svg" alt="brand-4">
+                    </div>
+                    <div id="brand-5" class="brand-box">
+                        <img src="/images/brand-5.svg" alt="brand-5">
+                    </div>
+                    <div id="brand-6" class="brand-box">
+                        <img src="/images/brand-6.svg" alt="brand-6">
+                    </div>
+                </div>
+            </section>
         </main>
         <footer>
-
+            <div class="container">
+                <p class="copyright">© 2024 Silicon. All rights reserved.</p>
+                <p class="credit">Credit MadrasThemes</p>
+            </div>
         </footer>
 
     </div>
