--- a/index.html
+++ b/index.html
@@ -94,13 +94,85 @@
                     </div>
                 </div>
             </section>
-        </main>
-        <footer>
-            <div class="container">
-                <p class="copyright">© 2024 Silicon. All rights reserved.</p>
-                <p class="credit">Credit MadrasThemes</p>
-            </div>
-        </footer>
+
+            <section id="app-features">
+                <div class="container">
+                    <div class="app-image">
+                        <img src="/images/app-image.svg" alt="app-image">
+                    </div>
+                    <div class="features">
+                        <h2>App Features</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat mollis egestas. Nam
+                            luctus facilisis ultrices. Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.
+                        </p>
+                        <div class="feature-group">
+                            <div class="feature">
+                                <div class="feature-img">
+                                    <img src="images/credit-card.svg" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Easy Payments</h3>
+                                    <p>Id mollis consectetur congue egestas egestas suspendisse blandit justo.</p>
+                                </div>
+                            </div>
+                            <div class="feature">
+                                <div class="feature-img">
+                                    <img src="images/bars-graphic.svg" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Cost Statistics</h3>
+                                    <p>Mattis urna ultricies non amet, purus in auctor non. Odio vulputate ac nibh.</p>
+                                </div>
+                            </div>
+                            <div class="feature">
+                                <div class="feature-img">
+                                    <img src="images/wallet.svg" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Regular Cashback</h3>
+                                    <p>Sit facilisis dolor arcu, fermentum vestibulum arcu elementum imperdiet eleifend.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="feature">
+                                <div class="feature-img">
+                                    <img src="images/shield.svg" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Data Security</h3>
+                                    <p>Augue pulvinar justo, fermentum fames aliquam accumsan vestibulum non.</p>
+                                </div>
+                            </div>
+                            <div class="feature">
+                                <div class="feature-img">
+                                    <img src="images/communication.svg" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Support 24/7</h3>
+                                    <p>A elementum, imperdiet enim, pretium etiam facilisi in aenean quam mauris.</p>
+                                </div>
+                            </div>
+                            <div class="feature"></div>
+                            <div class="feature-img">
+                                <img src="images/happy.svg" alt="">
+                            </div>
+                            <div class="content">
+                                <h3>Top Standards</h3>
+                                <p>Faucibus cursus maecenas lorem cursus nibh. Sociis sit risus id. Sit facilisis dolor
+                                    arcu.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+    </div>
+    </section>
+    </main>
+    <footer>
+        <div class="container">
+            <p class="copyright">© 2024 Silicon. All rights reserved.</p>
+            <p class="credit">Credit MadrasThemes</p>
+        </div>
+    </footer>
 
     </div>
 
