Design app-features

--- a/index.html
+++ b/index.html
@@ -102,13 +102,14 @@
                     </div>
                     <div class="features">
                         <h2>App Features</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin volutpat mollis egestas. Nam
+                        <p id="app-features-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+                            volutpat mollis egestas. Nam
                             luctus facilisis ultrices. Pellentesque volutpat ligula est. Mattis fermentum, at nec lacus.
                         </p>
                         <div class="feature-group">
                             <div class="feature">
                                 <div class="feature-img">
-                                    <img src="images/credit-card.svg" alt="">
+                                    <img src="images/credit-card.svg" alt="credit-card">
                                 </div>
                                 <div class="content">
                                     <h3>Easy Payments</h3>
@@ -117,26 +118,7 @@
                             </div>
                             <div class="feature">
                                 <div class="feature-img">
-                                    <img src="images/bars-graphic.svg" alt="">
-                                </div>
-                                <div class="content">
-                                    <h3>Cost Statistics</h3>
-                                    <p>Mattis urna ultricies non amet, purus in auctor non. Odio vulputate ac nibh.</p>
-                                </div>
-                            </div>
-                            <div class="feature">
-                                <div class="feature-img">
-                                    <img src="images/wallet.svg" alt="">
-                                </div>
-                                <div class="content">
-                                    <h3>Regular Cashback</h3>
-                                    <p>Sit facilisis dolor arcu, fermentum vestibulum arcu elementum imperdiet eleifend.
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="feature">
-                                <div class="feature-img">
-                                    <img src="images/shield.svg" alt="">
+                                    <img src="images/shield.svg" alt="shield">
                                 </div>
                                 <div class="content">
                                     <h3>Data Security</h3>
@@ -145,34 +127,55 @@
                             </div>
                             <div class="feature">
                                 <div class="feature-img">
-                                    <img src="images/communication.svg" alt="">
+                                    <img src="images/bars-graphic.svg" alt="bars-graphic">
+                                </div>
+                                <div class="content">
+                                    <h3>Cost Statistics</h3>
+                                    <p>Mattis urna ultricies non amet, purus in auctor non. Odio vulputate ac nibh.</p>
+                                </div>
+                            </div>
+                            <div class="feature">
+                                <div class="feature-img">
+                                    <img src="images/communication.svg" alt="communication">
                                 </div>
                                 <div class="content">
                                     <h3>Support 24/7</h3>
                                     <p>A elementum, imperdiet enim, pretium etiam facilisi in aenean quam mauris.</p>
                                 </div>
                             </div>
-                            <div class="feature"></div>
-                            <div class="feature-img">
-                                <img src="images/happy.svg" alt="">
+                            <div class="feature">
+                                <div class="feature-img">
+                                    <img src="images/wallet.svg" alt="wallet">
+                                </div>
+                                <div class="content">
+                                    <h3>Regular Cashback</h3>
+                                    <p>Sit facilisis dolor arcu, fermentum vestibulum arcu elementum imperdiet eleifend.
+                                    </p>
+                                </div>
                             </div>
-                            <div class="content">
-                                <h3>Top Standards</h3>
-                                <p>Faucibus cursus maecenas lorem cursus nibh. Sociis sit risus id. Sit facilisis dolor
-                                    arcu.</p>
+
+                            <div class="feature">
+                                <div class="feature-img">
+                                    <img src="images/happy.svg" alt="happy">
+                                </div>
+                                <div class="content">
+                                    <h3>Top Standards</h3>
+                                    <p>Faucibus cursus maecenas lorem cursus nibh. Sociis sit risus id. Sit facilisis
+                                        dolor
+                                        arcu.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-    </div>
-    </section>
-    </main>
-    <footer>
+            </section>
+        </main>
+        <!-- <footer>
         <div class="container">
             <p class="copyright">© 2024 Silicon. All rights reserved.</p>
             <p class="credit">Credit MadrasThemes</p>
         </div>
-    </footer>
+    </footer> -->
 
     </div>
 
