Design app-features section with css (Desktop mode)

--- a/index.html
+++ b/index.html
@@ -169,6 +169,10 @@
                     </div>
                 </div>
             </section>
+
+            <section id="app-features-2">
+                
+            </section>
         </main>
         <!-- <footer>
         <div class="container">
