Build app-features-2 section with html

--- a/index.html
+++ b/index.html
@@ -171,7 +171,40 @@
             </section>
 
             <section id="app-features-2">
-                
+                <h2>How Does It Work?</h2>
+                <div class="app-images">
+                    <div class="desktop-images">
+                        <img src="/images/iPhone 12 Pro.svg" alt="iPhone 12 Pro">
+                        <img src="/images/iPhone 12 Pro 2.svg" alt="iPhone 12 Pro">
+                        <img src="/images/iPhone 12 Pro 3.svg" alt="iPhone 12 Pro">
+                    </div>
+                    <div class="tablet-images">
+                        <img src="/images/4 → 02-app-showcase-screens.png.svg" alt="iPhone 12 Pro">
+                        <img src="/images/iPhone 12 Pro (mobile mode).svg" alt="iPhone 12 Pro">
+                        <img src="/images/4 → 04-app-showcase-screens.png.svg" alt="iPhone 12 Pro">
+                    </div>
+                    <div class="mobile-images">
+                        <img src="/images/iPhone 12 Pro (mobile mode).svg" alt="iPhone 12 Pro">
+                    </div>
+                </div>
+                <div class="app-text">
+                    <div class="desktop-text">
+                        <h3>Latest transaction history</h3>
+                        <p>Enim, et amet praesent pharetra. Mi non ante hendrerit amet sed. Arcu sociis tristique
+                            quisque hac in consectetur condimentum. </p>
+                    </div>
+                    <div class="tablet-text">
+                        <h3>Step 3. Transfers to people from your contact list</h3>
+                    </div>
+                    <p>Proin volutpat mollis egestas. Nam luctus facilisis ultrices. Pellentesque volutpat ligula est.
+                        Mattis fermentum, at nec lacus.</p>
+                </div>
+                <div class="mobile-text">
+                    <h3>Transfers to people from your contact list</h3>
+                    <p>Proin volutpat mollis egestas. Nam luctus facilisis ultrices. Pellentesque volutpat ligula est.
+                        Mattis fermentum, at nec lacus.</p>
+                </div>
+
             </section>
         </main>
         <!-- <footer>
