Build app-features-3 section with html

--- a/index.html
+++ b/index.html
@@ -210,6 +210,49 @@
                         </div>
                     </div>
             </section>
+
+            <section id="app-features-3">
+                <div class="container">
+                    <div class="transfer-features">
+                        <h3>Make your money transfer simple and clear</h3>
+                        <ul>
+                            <li>Banking transactions are free for you</li>
+                            <li>No monthly cash commission</li>
+                            <li>Manage payments and transactions online</li>
+                        </ul>
+                        <button class="learn-more">
+                            <span>Learn more</span>
+                            <i class="fa-light fa-arrow-right"></i>
+                        </button>
+                    </div>
+                    <div class="transfer-images">
+                        <img src="/images/forecast.svg" alt="forecast">
+                    </div>
+                    <div class="receive-images">
+                        <img src="/images/contacts.svg" alt="contacts">
+                    </div>
+                    <div class="receive-features">
+                        <h3>Receive payment from international bank details</h3>
+                        <div class="receive-1">
+                            <div class="receive-img">
+                                <img src="/images/credit-card.svg" alt="wallet">
+                            </div>
+                            <p>Manage your payments online. Mollis congue egestas egestas fermentum fames.</p>
+                        </div>
+                        <div class="receive-2">
+                            <div class="receive-img">
+                                <img src="/images/wallet.svg" alt="wallet">
+                            </div>
+                            <p>A elementur and imperdiet enim, pretium etiam facilisi aenean quam mauris.</p>
+                        </div>
+                        <button class="learn-more">
+                            <span>Learn more</span>
+                            <i class="fa-light fa-arrow-right"></i>
+                        </button>
+                    </div>
+
+                </div>
+            </section>
         </main>
         <!-- <footer>
         <div class="container">
