Design app-features-3 section wirh css

--- a/index.html
+++ b/index.html
@@ -216,9 +216,15 @@
                     <div class="transfer-features">
                         <h3>Make your money transfer simple and clear</h3>
                         <ul>
-                            <li>Banking transactions are free for you</li>
-                            <li>No monthly cash commission</li>
-                            <li>Manage payments and transactions online</li>
+                            <li><i class="fa-regular fa-circle-check"></i>
+                                <span>Banking transactions are free for you</span>
+                            </li>
+                            <li><i class="fa-regular fa-circle-check"></i>
+                                <span>No monthly cash commission</span>
+                            </li>
+                            <li><i class="fa-regular fa-circle-check"></i>
+                                <span>Manage payments and transactions online</span>
+                            </li>
                         </ul>
                         <button class="learn-more">
                             <span>Learn more</span>
@@ -233,17 +239,19 @@
                     </div>
                     <div class="receive-features">
                         <h3>Receive payment from international bank details</h3>
-                        <div class="receive-1">
-                            <div class="receive-img">
-                                <img src="/images/credit-card.svg" alt="wallet">
+                        <div class="receive-info">
+                            <div class="receive-1">
+                                <div class="receive-img">
+                                    <img src="/images/credit-card.svg" alt="wallet">
+                                </div>
+                                <p>Manage your payments online. Mollis congue egestas egestas fermentum fames.</p>
                             </div>
-                            <p>Manage your payments online. Mollis congue egestas egestas fermentum fames.</p>
-                        </div>
-                        <div class="receive-2">
-                            <div class="receive-img">
-                                <img src="/images/wallet.svg" alt="wallet">
+                            <div class="receive-2">
+                                <div class="receive-img">
+                                    <img src="/images/wallet.svg" alt="wallet">
+                                </div>
+                                <p>A elementur and imperdiet enim, pretium etiam facilisi aenean quam mauris.</p>
                             </div>
-                            <p>A elementur and imperdiet enim, pretium etiam facilisi aenean quam mauris.</p>
                         </div>
                         <button class="learn-more">
                             <span>Learn more</span>
