--- a/index.html
+++ b/index.html
@@ -266,27 +266,32 @@
                 <div class="container">
                     <h2>Clients are Loving Our App</h2>
                     <div class="client-review">
-                        <img src="/images/quotes.svg" alt="quotes">
-                        <img src="/images/rating1.svg" alt="rating1">
+                        <img src="/images/quotes.svg" class="quote-img" alt="quotes">
+                        <img src="/images/rating1.svg" class="rating-img" alt="rating1">
                         <p>Sit pretium aliquam tempor, orci dolor sed maecenas rutrum sagittis. Laoreet posuere rhoncus,
                             egestas lacus, egestas justo aliquam vel. Nisi vitae lectus hac hendrerit. Montes justo
                             turpis sit amet.</p>
                         <div class="client-info">
                             <img src="/images/female.svg" alt="female">
-                            <h3>Fannie Summers</h3>
-                            <p>Designer</p>
+
+                            <div class="name-job">
+                                <h3>Fannie Summers</h3>
+                                <p>Designer</p>
+                            </div>
                         </div>
                     </div>
                     <div class="client-review">
-                        <img src="/images/quotes.svg" alt="quotes">
-                        <img src="/images/rating2.svg" alt="rating2">
+                        <img src="/images/quotes.svg" class="quote-img" alt="quotes">
+                        <img src="/images/rating2.svg" class="rating-img" alt="rating2">
                         <p>Nunc senectus leo vel venenatis accumsan vestibulum sollicitudin amet porttitor. Nisl
                             bibendum nulla tincidunt eu enim ornare dictumst sit amet. Dictum pretium dolor tincidunt
                             egestas eget nunc.</p>
                         <div class="client-info">
                             <img src="/images/male.svg" alt="male">
-                            <h3>Albert Flores</h3>
-                            <p>Developer</p>
+                            <div class="name-job">
+                                <h3>Albert Flores</h3>
+                                <p>Developer</p>
+                            </div>
                         </div>
                     </div>
                 </div>
