Design faqs section with css (mobile mode)

--- a/index.html
+++ b/index.html
@@ -298,70 +298,105 @@
             </section>
 
             <section id="faqs">
-                <div class="contacts">
-                    <h2>Any questions? Check out the FAQs</h2>
-                    <p>Still have unanswered questions and need to get in touch?</p>
-                    <div class="phone">
-                        <i class="fa-solid fa-phone-volume"></i>
-                        <p>Still have questions?</p>
-                        <button id="contact-phone">
-                            <span>Contact us</span>
-                            <i class="fa-regular fa-arrow-right"></i>
-                        </button>
+                <div class="container">
+                    <div class="contacts">
+                        <h2>Any questions? Check out the FAQs</h2>
+                        <p>Still have unanswered questions and need to get in touch?</p>
+                        <div class="phone">
+                            <i class="fa-solid fa-phone-volume"></i>
+                            <p>Still have questions?</p>
+                            <button id="contact-phone">
+                                <span>Contact us</span>
+                                <i class="fa-regular fa-arrow-right"></i>
+                            </button>
+                        </div>
+                        <div class="sms">
+                            <i class="fa-solid fa-comment-dots"></i>
+                            <p>Don't like phone calls?</p>
+                            <button id="contact-sms">
+                                <span>Contact us</span>
+                                <i class="fa-regular fa-arrow-right"></i>
+                            </button>
+                        </div>
+                        <div class="sms"></div>
                     </div>
-                    <div class="sms">
-                        <i class="fa-solid fa-comment-dots"></i>
-                        <p>Don't like phone calls?</p>
-                        <button id="contact-sms">
-                            <span>Contact us</span>
-                            <i class="fa-regular fa-arrow-right"></i>
-                        </button>
+                    <div class="questions">
+                        <div class="faq">
+                            <details>
+                                <summary>
+                                    <span>Is any of my personal information stored in the App?</span>
+                                    <div class="icon">
+                                        <i class="fa-regular fa-angle-down"></i>
+                                    </div>
+                                </summary>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, autem.</p>
+                            </details>
+                        </div>
+                        <div class="faq">
+                            <details>
+                                <summary>
+                                    <span>What formats can I download my transaction history in?</span>
+                                    <div class="icon">
+                                        <i class="fa-regular fa-angle-down"></i>
+                                    </div>
+                                </summary>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, autem.</p>
+                            </details>
+                        </div>
+                        <div class="faq">
+                            <details>
+                                <summary>
+                                    <span>Can I schedule future transfers?</span>
+                                    <div class="icon">
+                                        <i class="fa-regular fa-angle-down"></i>
+                                    </div>
+                                </summary>
+                                <p>Nunc duis id aenean gravida tincidunt eu, tempor ullamcorper. Viverra aliquam arcu,
+                                    viverra et, cursus. Aliquet pretium cursus adipiscing gravida et consequat lobortis
+                                    arcu
+                                    velit. Nibh pharetra fermentum duis accumsan lectus non. Massa cursus molestie lorem
+                                    scelerisque pellentesque. Nisi, enim, arcu purus gravida adipiscing euismod montes,
+                                    duis
+                                    egestas. Vehicula eu etiam quam tristique tincidunt suspendisse ut consequat.</p>
+                            </details>
+                        </div>
+                        <div class="faq">
+                            <details>
+                                <summary>
+                                    <span>When can I use Banking App services?</span>
+                                    <div class="icon">
+                                        <i class="fa-regular fa-angle-down"></i>
+                                    </div>
+                                </summary>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, autem.</p>
+                            </details>
+                        </div>
+                        <div class="faq">
+                            <details>
+                                <summary>
+                                    <span>Can I create my own password that is easy for me to remember?</span>
+                                    <div class="icon">
+                                        <i class="fa-regular fa-angle-down"></i>
+                                    </div>
+                                </summary>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, autem.</p>
+                            </details>
+                        </div>
+                        <div class="faq">
+                            <details>
+                                <summary>
+                                    <span>What happens if I forget or lose my password?</span>
+                                    <div class="icon">
+                                        <i class="fa-regular fa-angle-down"></i>
+                                    </div>
+                                </summary>
+                                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, autem.</p>
+                            </details>
+                        </div>
                     </div>
-                    <div class="sms"></div>
-                </div>
-                <div class="questions">
-                    <div class="faq">
-                        <details>
-                            <summary>Is any of my personal information stored in the App?
-                                <i class="fa-solid fa-angle-down"></i>
-                            </summary>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, autem.</p>
-                        </details>
-                    </div>
-                    <div class="faq">
-                        <details>
-                            <summary>What formats can I download my transaction history in?</summary>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, autem.</p>
-                        </details>
-                    </div>
-                    <div class="faq">
-                        <details>
-                            <summary>Can I schedule future transfers?</summary>
-                            <p>Nunc duis id aenean gravida tincidunt eu, tempor ullamcorper. Viverra aliquam arcu,
-                                viverra et, cursus. Aliquet pretium cursus adipiscing gravida et consequat lobortis arcu
-                                velit. Nibh pharetra fermentum duis accumsan lectus non. Massa cursus molestie lorem
-                                scelerisque pellentesque. Nisi, enim, arcu purus gravida adipiscing euismod montes, duis
-                                egestas. Vehicula eu etiam quam tristique tincidunt suspendisse ut consequat.</p>
-                        </details>
-                    </div>
-                    <div class="faq">
-                        <details>
-                            <summary>When can I use Banking App services?</summary>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, autem.</p>
-                        </details>
-                    </div>
-                    <div class="faq">
-                        <details>
-                            <summary>Can I create my own password that is easy for me to remember?</summary>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, autem.</p>
-                        </details>
-                    </div>
-                    <div class="faq">
-                        <details>
-                            <summary>What happens if I forget or lose my password?</summary>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, autem.</p>
-                        </details>
-                    </div>
+                    <button class="contact-us">
+                        Contact us now
+                    </button>
                 </div>
             </section>
         </main>
