Design faqs section with css (tablet mode)

--- a/index.html
+++ b/index.html
@@ -302,23 +302,6 @@
                     <div class="contacts">
                         <h2>Any questions? Check out the FAQs</h2>
                         <p>Still have unanswered questions and need to get in touch?</p>
-                        <div class="phone">
-                            <i class="fa-solid fa-phone-volume"></i>
-                            <p>Still have questions?</p>
-                            <button id="contact-phone">
-                                <span>Contact us</span>
-                                <i class="fa-regular fa-arrow-right"></i>
-                            </button>
-                        </div>
-                        <div class="sms">
-                            <i class="fa-solid fa-comment-dots"></i>
-                            <p>Don't like phone calls?</p>
-                            <button id="contact-sms">
-                                <span>Contact us</span>
-                                <i class="fa-regular fa-arrow-right"></i>
-                            </button>
-                        </div>
-                        <div class="sms"></div>
                     </div>
                     <div class="questions">
                         <div class="faq">
@@ -392,6 +375,24 @@
                                 </summary>
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat, autem.</p>
                             </details>
+                        </div>
+                    </div>
+                    <div class="contact-methods">
+                        <div class="phone">
+                            <i id="phone-icon" class="fa-solid fa-phone-volume"></i>
+                            <p>Still have questions?</p>
+                            <button id="contact-phone">
+                                <span>Contact us</span>
+                                <i class="fa-regular fa-arrow-right"></i>
+                            </button>
+                        </div>
+                        <div class="sms">
+                            <i id="sms-icon" class="fa-solid fa-comment-dots"></i>
+                            <p>Don't like phone calls?</p>
+                            <button id="contact-sms">
+                                <span>Contact us</span>
+                                <i class="fa-regular fa-arrow-right"></i>
+                            </button>
                         </div>
                     </div>
                     <button class="contact-us">
