Build subscribe section with html

--- a/index.html
+++ b/index.html
@@ -400,6 +400,19 @@
                     </button>
                 </div>
             </section>
+
+            <section id="subscribe">
+                <div class="container">
+                    <div class="notification">
+                        <img src="/images/notification.svg" alt="notification">
+                        <h3>Subscribe to our newsletter to stay informed about latest updates</h3>
+                        <form action="#" class="subscribe-form">
+                            <input id="your-email" type="email" placeholder="Your Email">
+                            <input type="submit" value="Subscribe">
+                        </form>
+                    </div>
+                </div>
+            </section>
         </main>
         <!-- <footer>
         <div class="container">
