--- a/index.html
+++ b/index.html
@@ -405,12 +405,13 @@
                 <div class="container">
                     <div class="notification">
                         <img src="/images/notification.svg" alt="notification">
-                        <h3>Subscribe to our newsletter to stay informed about latest updates</h3>
-                        <form action="#" class="subscribe-form">
-                            <input id="your-email" type="email" placeholder="Your Email">
-                            <input type="submit" value="Subscribe">
-                        </form>
+                        <h3>Subscribe to our newsletter <span>to stay informed about latest updates</span></h3>
                     </div>
+                    <form action="#" class="subscribe-form">
+                        <div></div>
+                        <input id="your-email" type="email" placeholder="Your email">
+                        <input id="sub" type="submit" value="Subscribe">
+                    </form>
                 </div>
             </section>
         </main>
