Build footer with html

--- a/index.html
+++ b/index.html
@@ -415,12 +415,12 @@
                 </div>
             </section>
         </main>
-        <!-- <footer>
+        <footer>
         <div class="container">
             <p class="copyright">© 2024 Silicon. All rights reserved.</p>
             <p class="credit">Credit MadrasThemes</p>
         </div>
-    </footer> -->
+    </footer>
 
     </div>
 
