Fix the colors variables in root

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="">
 
 <head>
     <meta charset="UTF-8">
@@ -271,14 +271,9 @@
                         <p>Sit pretium aliquam tempor, orci dolor sed maecenas rutrum sagittis. Laoreet posuere rhoncus,
                             egestas lacus, egestas justo aliquam vel. Nisi vitae lectus hac hendrerit. Montes justo
                             turpis sit amet.</p>
-                        <div class="client-info">
-                            <img src="/images/female.svg" alt="female">
-
-                            <div class="name-job">
-                                <h3>Fannie Summers</h3>
-                                <p>Designer</p>
-                            </div>
-                        </div>
+                        <img class="client-img" src="/images/female.svg" alt="female">
+                        <h3 class="client-name">Fannie Summers</h3>
+                        <p class="client-job">Designer</p>
                     </div>
                     <div class="client-review">
                         <img src="/images/quotes.svg" class="quote-img" alt="quotes">
@@ -286,13 +281,9 @@
                         <p>Nunc senectus leo vel venenatis accumsan vestibulum sollicitudin amet porttitor. Nisl
                             bibendum nulla tincidunt eu enim ornare dictumst sit amet. Dictum pretium dolor tincidunt
                             egestas eget nunc.</p>
-                        <div class="client-info">
-                            <img src="/images/male.svg" alt="male">
-                            <div class="name-job">
-                                <h3>Albert Flores</h3>
-                                <p>Developer</p>
-                            </div>
-                        </div>
+                        <img class="client-img" src="/images/male.svg" alt="male">
+                        <h3 class="client-name">Albert Flores</h3>
+                        <p class="client-job">Developer</p>
                     </div>
                 </div>
             </section>
@@ -416,14 +407,14 @@
             </section>
         </main>
         <footer>
-        <div class="container">
-            <p class="copyright">© 2024 Silicon. All rights reserved.</p>
-            <p class="credit">Credit MadrasThemes</p>
-        </div>
-    </footer>
+            <div class="container">
+                <p class="copyright">© 2024 Silicon. All rights reserved.</p>
+                <p class="credit">Credit MadrasThemes</p>
+            </div>
+        </footer>
 
     </div>
-
+    <script src="darkmode.js"></script>
 </body>
 
 </html>
