Build the dark mode style

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="">
+<html lang="en" class="dark">
 
 <head>
     <meta charset="UTF-8">
@@ -16,7 +16,8 @@
         <header>
             <div class="container">
 
-                <a href="#"><img src="/images/logo.svg" alt="logo"></a>
+                <a href="#"><img src="/images/logo.svg" alt="logo">
+                    <span class="company-name">Silicon</span></a>
 
                 <nav id="main-menu" class="navbar">
                     <a class="nav-link" href="#">Features</a>
